--- a/front-end_deveploment/src/components/event-list.component/event-list.component.css
+++ b/front-end_deveploment/src/components/event-list.component/event-list.component.css
@@ -1,81 +1,3 @@
-.body{
-  font-family: Arial, Arial, Helvetica, sans-serif;
-  font-size: 14px;
-  color: black;
-  background-color: white;
-  float: left;
-}
-
-@media screen and (max-width: 580px) {
-  body {
-    font-size: 16px;
-  }
-}
-
-.wrapper {
-  margin: 0 auto;
-  padding: 10px;
-  max-width: 800px;
-}
-
-.table {
-  margin: 0 auto;
-  width: 100%;
-  display: table;
-}
-
-@media screen and (max-width: 580px) {
-  .table {
-    display: flex;
-  }
-}
-
-.row {
-  display: table-row;
-}
-
-.row.header {
-  font-weight: 900;
-  color:black;
-  background:white;
-}
-
-@media screen and (max-width: 580px) {
-  .row {
-    padding: 14px 0 7px;
-  }
-
-  .row.header {
-    padding: 0;
-    height: 6px;
-  }
-
-  .row .data {
-    margin-bottom: 10px;
-  }
-
-  .row .cell:before {
-    margin-bottom: 3px;
-    content: attr(data-title);
-    min-width: 98px;
-    line-height: 10px;
-    font-weight: bold;
-    display: block;
-  }
-}
-
-.cell {
-  padding: 6px 12px;
-  display: table-cell;
-}
-
-@media screen and (max-width: 580px) {
-  .cell {
-    padding: 2px 16px;
-    display: block;;
-  }
-}
-
 .buttonColor {
   background-color: orange;
   color: black;
@@ -93,7 +15,39 @@ p {
 	float: left;
 }
 
-td{
-  border:1px solid #ccc;
+table {
+  width: 70%;
+  border-collapse:collapse;
 }
 
+td{
+  margin: 0;
+  padding: 0.5rem;
+  border-bottom: 0 ;
+  border-right: 1px solid black;
+}
+
+
+th {
+  margin: 0;
+  padding: 0.5rem;
+  border-bottom: 0 ;
+  border-right: 1px solid black;
+}
+
+tr {
+  margin: 0;
+  padding: 0.5rem;
+  border-bottom: 0 ;
+  border-right: 1px solid black;
+}
+
+thead {
+
+  border:1px solid black;
+}
+
+tbody {
+  display: inline-table;
+  border:1px solid black;
+}
