--- a/front-end_deveploment/src/components/event-list.component/event-list.component.css
+++ b/front-end_deveploment/src/components/event-list.component/event-list.component.css
@@ -1,19 +1,21 @@
-.buttonColor {
-  background-color: orange;
-  color: black;
-  margin: 10px 30px;
-	float: left;
+.container {  
+  padding: 10px 30px;
+  display: flex;
+  flex-direction: column;
+  height: 20vh;
 }
 
-h3 {
-  margin: 10px 30px;
+h1 {
+  padding: 10px 30px;
+  font-size: 2em;
 	text-align: left;
 }
 
-p {
-  margin: 10px 30px;
-	float: left;
+h4 {
+  text-align: left;
 }
+
+
 
 table {
   border-collapse: collapse;
@@ -23,4 +25,13 @@ td, th {
   border: 1px solid #999;
   padding: 0.5rem;
   text-align: left;
+}
+
+.customButton {
+  padding: 5px;
+  background-color: orange;
+  color: black;
+  margin: 10px 30px;
+  display: flex;
+  flex-direction: column;
 }
