--- a/front-end_deveploment/src/App.css
+++ b/front-end_deveploment/src/App.css
@@ -1,10 +1,10 @@
 h1 {
-  margin: 20px 0px 0px 0px;
+  margin: 20px 0px 0px 10px;
 	text-align: left;
 }
 
 h2 {
-  margin: 20px 0px 0px 40px;
+  margin: 20px 0px 0px 50px;
 	text-align: left;
 }
 
@@ -15,21 +15,16 @@ h2 {
   display: table;
 }
 
-[class*="col-"] {
-  float: left;
+.row {
+  flex: 50%;
   padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
 }
 
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
+@media screen and (max-width: 600px) {
+  .row {
+    width: 100%;
+  }
+}
+
 
